fix: update for json-render 0.6

--- a/apps/playground/blocks/workspace-settings-page.json
+++ b/apps/playground/blocks/workspace-settings-page.json
@@ -8,7 +8,6 @@
     "root": "settings-page",
     "elements": {
       "settings-page": {
-        "key": "settings-page",
         "type": "Stack",
         "props": {
           "gap": 8,
@@ -28,48 +27,45 @@
         ]
       },
       "personal-section": {
-        "key": "personal-section",
         "type": "Group",
         "props": {
           "gap": 8,
           "ay": "start",
           "fullwidth": true
         },
-        "children": ["personal-label", "personal-fields"],
-        "parentKey": "settings-page"
+        "children": [
+          "personal-label",
+          "personal-fields"
+        ]
       },
       "personal-label": {
-        "key": "personal-label",
         "type": "Stack",
         "props": {
           "gap": 4,
           "maxw": 320
         },
-        "children": ["personal-heading", "personal-description"],
-        "parentKey": "personal-section"
+        "children": [
+          "personal-heading",
+          "personal-description"
+        ]
       },
       "personal-heading": {
-        "key": "personal-heading",
         "type": "Text",
         "props": {
           "children": "Personal information",
           "size": 1,
           "weight": "bold"
-        },
-        "parentKey": "personal-label"
+        }
       },
       "personal-description": {
-        "key": "personal-description",
         "type": "Text",
         "props": {
           "children": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr.",
           "size": 0,
           "shade": "muted"
-        },
-        "parentKey": "personal-label"
+        }
       },
       "personal-fields": {
-        "key": "personal-fields",
         "type": "Stack",
         "props": {
           "gap": 3,
@@ -81,136 +77,120 @@
           "email-field",
           "birth-role-row",
           "role-helper"
-        ],
-        "parentKey": "personal-section"
+        ]
       },
       "name-row": {
-        "key": "name-row",
         "type": "Group",
         "props": {
           "gap": 3,
           "evenly": true
         },
-        "children": ["first-name", "last-name"],
-        "parentKey": "personal-fields"
+        "children": [
+          "first-name",
+          "last-name"
+        ]
       },
       "first-name": {
-        "key": "first-name",
         "type": "Input",
         "props": {
           "label": "First name",
           "defaultValue": "Emma"
-        },
-        "parentKey": "name-row"
+        }
       },
       "last-name": {
-        "key": "last-name",
         "type": "Input",
         "props": {
           "label": "Last name",
           "defaultValue": "Crown"
-        },
-        "parentKey": "name-row"
+        }
       },
       "email-field": {
-        "key": "email-field",
         "type": "Input",
         "props": {
           "label": "Email",
           "type": "email",
           "defaultValue": "emma@company.com"
-        },
-        "parentKey": "personal-fields"
+        }
       },
       "birth-role-row": {
-        "key": "birth-role-row",
         "type": "Group",
         "props": {
           "gap": 3,
           "evenly": true
         },
-        "children": ["birth-year", "role-field"],
-        "parentKey": "personal-fields"
+        "children": [
+          "birth-year",
+          "role-field"
+        ]
       },
       "birth-year": {
-        "key": "birth-year",
         "type": "Input",
         "props": {
           "label": "Birth year",
           "defaultValue": "1990"
-        },
-        "parentKey": "birth-role-row"
+        }
       },
       "role-field": {
-        "key": "role-field",
         "type": "Input",
         "props": {
           "label": "Role",
           "defaultValue": "Senior Manager",
           "disabled": true
-        },
-        "parentKey": "birth-role-row"
+        }
       },
       "role-helper": {
-        "key": "role-helper",
         "type": "Text",
         "props": {
           "children": "Roles can only be changed by system admin.",
           "size": -1,
           "shade": "muted",
           "align": "right"
-        },
-        "parentKey": "personal-fields"
+        }
       },
       "separator-1": {
-        "key": "separator-1",
         "type": "Separator",
-        "props": {},
-        "parentKey": "settings-page"
+        "props": {}
       },
       "workspace-section": {
-        "key": "workspace-section",
         "type": "Group",
         "props": {
           "gap": 8,
           "ay": "start",
           "fullwidth": true
         },
-        "children": ["workspace-label", "workspace-fields"],
-        "parentKey": "settings-page"
+        "children": [
+          "workspace-label",
+          "workspace-fields"
+        ]
       },
       "workspace-label": {
-        "key": "workspace-label",
         "type": "Stack",
         "props": {
           "gap": 4,
           "maxw": 320
         },
-        "children": ["workspace-heading", "workspace-description"],
-        "parentKey": "workspace-section"
+        "children": [
+          "workspace-heading",
+          "workspace-description"
+        ]
       },
       "workspace-heading": {
-        "key": "workspace-heading",
         "type": "Text",
         "props": {
           "children": "Workspace settings",
           "size": 1,
           "weight": "bold"
-        },
-        "parentKey": "workspace-label"
+        }
       },
       "workspace-description": {
-        "key": "workspace-description",
         "type": "Text",
         "props": {
           "children": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr.",
           "size": 0,
           "shade": "muted"
-        },
-        "parentKey": "workspace-label"
+        }
       },
       "workspace-fields": {
-        "key": "workspace-fields",
         "type": "Stack",
         "props": {
           "gap": 3,
@@ -221,110 +201,103 @@
           "workspace-name-row",
           "workspace-desc-textarea",
           "workspace-note"
-        ],
-        "parentKey": "workspace-section"
+        ]
       },
       "workspace-name-row": {
-        "key": "workspace-name-row",
         "type": "Group",
         "props": {
           "gap": 3,
           "evenly": true
         },
-        "children": ["workspace-name", "visibility-select"],
-        "parentKey": "workspace-fields"
+        "children": [
+          "workspace-name",
+          "visibility-select"
+        ]
       },
       "workspace-name": {
-        "key": "workspace-name",
         "type": "Input",
         "props": {
           "label": "Workspace name",
           "defaultValue": "Test workspace"
-        },
-        "parentKey": "workspace-name-row"
+        }
       },
       "visibility-select": {
-        "key": "visibility-select",
         "type": "Select",
         "props": {
           "label": "Visibility",
           "defaultValue": "private",
           "items": [
-            { "label": "Private", "value": "private" },
-            { "label": "Public", "value": "public" }
+            {
+              "label": "Private",
+              "value": "private"
+            },
+            {
+              "label": "Public",
+              "value": "public"
+            }
           ]
-        },
-        "parentKey": "workspace-name-row"
+        }
       },
       "workspace-desc-textarea": {
-        "key": "workspace-desc-textarea",
         "type": "Textarea",
         "props": {
           "label": "Workspace description",
           "rows": 4,
           "resize": "vertical"
-        },
-        "parentKey": "workspace-fields"
+        }
       },
       "workspace-note": {
-        "key": "workspace-note",
         "type": "Text",
         "props": {
           "children": "Note: description provided will not be displayed externally.",
           "size": -1,
           "shade": "muted"
-        },
-        "parentKey": "workspace-fields"
+        }
       },
       "separator-2": {
-        "key": "separator-2",
         "type": "Separator",
-        "props": {},
-        "parentKey": "settings-page"
+        "props": {}
       },
       "notification-section": {
-        "key": "notification-section",
         "type": "Group",
         "props": {
           "gap": 8,
           "ay": "start",
           "fullwidth": true
         },
-        "children": ["notification-label", "notification-fields"],
-        "parentKey": "settings-page"
+        "children": [
+          "notification-label",
+          "notification-fields"
+        ]
       },
       "notification-label": {
-        "key": "notification-label",
         "type": "Stack",
         "props": {
           "gap": 4,
           "maxw": 320
         },
-        "children": ["notification-heading", "notification-description"],
-        "parentKey": "notification-section"
+        "children": [
+          "notification-heading",
+          "notification-description"
+        ]
       },
       "notification-heading": {
-        "key": "notification-heading",
         "type": "Text",
         "props": {
           "children": "Notification settings",
           "size": 1,
           "weight": "bold"
-        },
-        "parentKey": "notification-label"
+        }
       },
       "notification-description": {
-        "key": "notification-description",
         "type": "Text",
         "props": {
           "children": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr.",
           "size": 0,
           "shade": "muted"
-        },
-        "parentKey": "notification-label"
+        }
       },
       "notification-fields": {
-        "key": "notification-fields",
         "type": "Stack",
         "props": {
           "gap": 3,
@@ -335,99 +308,85 @@
           "newsletter-heading",
           "newsletter-description",
           "newsletter-options"
-        ],
-        "parentKey": "notification-section"
+        ]
       },
       "newsletter-heading": {
-        "key": "newsletter-heading",
         "type": "Text",
         "props": {
           "children": "Newsletter",
           "size": 0,
           "weight": "bold"
-        },
-        "parentKey": "notification-fields"
+        }
       },
       "newsletter-description": {
-        "key": "newsletter-description",
         "type": "Text",
         "props": {
           "children": "Change how often you want to receive updates from our newsletter.",
           "size": 0,
           "shade": "muted"
-        },
-        "parentKey": "notification-fields"
+        }
       },
       "newsletter-options": {
-        "key": "newsletter-options",
         "type": "Stack",
         "props": {
           "gap": 1
         },
-        "children": ["option-weekly", "option-monthly", "option-never"],
-        "parentKey": "notification-fields"
+        "children": [
+          "option-weekly",
+          "option-monthly",
+          "option-never"
+        ]
       },
       "option-weekly": {
-        "key": "option-weekly",
         "type": "Checkbox",
         "props": {
           "label": "Every week",
           "name": "newsletter"
-        },
-        "parentKey": "newsletter-options"
+        }
       },
       "option-monthly": {
-        "key": "option-monthly",
         "type": "Checkbox",
         "props": {
           "label": "Every month",
           "name": "newsletter"
-        },
-        "parentKey": "newsletter-options"
+        }
       },
       "option-never": {
-        "key": "option-never",
         "type": "Checkbox",
         "props": {
           "label": "Never",
           "name": "newsletter",
           "defaultChecked": true
-        },
-        "parentKey": "newsletter-options"
+        }
       },
       "separator-3": {
-        "key": "separator-3",
         "type": "Separator",
-        "props": {},
-        "parentKey": "settings-page"
+        "props": {}
       },
       "footer-actions": {
-        "key": "footer-actions",
         "type": "Group",
         "props": {
           "gap": 2,
           "ax": "end",
           "fullwidth": true
         },
-        "children": ["go-back-button", "save-button"],
-        "parentKey": "settings-page"
+        "children": [
+          "go-back-button",
+          "save-button"
+        ]
       },
       "go-back-button": {
-        "key": "go-back-button",
         "type": "Button",
         "props": {
           "ghost": true,
           "children": "Go back"
-        },
-        "parentKey": "footer-actions"
+        }
       },
       "save-button": {
-        "key": "save-button",
         "type": "Button",
         "props": {
           "children": "Save settings"
-        },
-        "parentKey": "footer-actions"
+        }
       }
     }
   },
