refactor: add json blocks to blocks package

--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -13,6 +13,7 @@
     "@icons-pack/react-simple-icons": "^13.8.0",
 "@json-render/core": "^0.6.0",
     "@json-render/react": "^0.6.0",
+    "@uiid/blocks": "workspace:*",
     "@uiid/buttons": "workspace:*",
     "@uiid/cards": "workspace:*",
     "@uiid/code": "workspace:*",
