--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
   },
   "files": [],
   "references": [
+    { "path": "./packages/blocks" },
     { "path": "./packages/buttons" },
     { "path": "./packages/calendars" },
     { "path": "./packages/cards" },
