chore: rename playground to blocks, add vision doc, rewrite README
- Rename apps/playground → apps/blocks; update all references across
  CLAUDE.md, README, guides, templates, changeset config, and app source
- Rewrite README around registry-first thesis with three-layer model
  and two getting-started paths (components vs. full system)
- Add docs/VISION.md as canonical reference for project direction,
  decisions log, and architectural context

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -28,5 +28,5 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["@uiid/storybook", "next-16", "playground", "docs"]
+  "ignore": ["@uiid/storybook", "next-16", "blocks", "docs"]
 }
