refactor: simplify versioning and changelog pipeline
Replace bespoke changelog scripts and JSON artifacts with @changesets/changelog-github.
Fix auto-changeset workflow to always report a status (solves release PR CI blocking).
Add PR title enforcement via action-semantic-pull-request.
Skip test/lint jobs on changeset release branches.

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
-  "changelog": "./changelog-generator.cjs",
+  "changelog": ["@changesets/changelog-github", { "repo": "uiid-systems/design-system" }],
   "commit": false,
   "fixed": [
     [
