--- a/package.json
+++ b/package.json
@@ -17,15 +17,9 @@
     "storybook": "turbo storybook",
     "build-storybook": "turbo build-storybook",
     "changeset": "changeset",
-    "changeset:version": "changeset version && pnpm run build-changelog",
-    "changeset:release": "changeset && pnpm run changeset:version",
-    "auto-changeset": "node scripts/auto-changeset.mjs",
-    "version-packages": "changeset version && pnpm run build-changelog",
-    "auto-release": "pnpm run auto-changeset && pnpm run version-packages && git add packages/changelog.json packages/changelog-packages.json && git commit --amend --no-edit",
+    "changeset:version": "changeset version",
     "release": "turbo build && changeset publish",
     "generate-readmes": "node scripts/generate-readmes.mjs",
-    "build-changelog": "node scripts/build-changelog.mjs",
-    "sync-changelog": "pnpm run build-changelog",
     "prepare": "husky",
     "postinstall": "playwright install chromium --with-deps"
   },
