--- a/.github/workflows/auto-changeset.yml
+++ b/.github/workflows/auto-changeset.yml
@@ -15,11 +15,18 @@ jobs:
       pull-requests: write
       statuses: write
     steps:
-      - name: Skip for release PRs
-        if: startsWith(github.head_ref, 'changeset-release/')
-        run: echo "Release PR — skipping changeset check" && exit 0
+      - name: Check if release PR
+        id: check
+        run: |
+          if [[ "${{ github.head_ref }}" == changeset-release/* ]]; then
+            echo "skip=true" >> $GITHUB_OUTPUT
+            echo "Release PR — skipping changeset creation"
+          else
+            echo "skip=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Checkout Repo
+        if: steps.check.outputs.skip != 'true'
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -27,17 +34,21 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Node.js 20
+        if: steps.check.outputs.skip != 'true'
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
       - name: Setup pnpm
+        if: steps.check.outputs.skip != 'true'
         uses: pnpm/action-setup@v4
 
       - name: Install Dependencies
+        if: steps.check.outputs.skip != 'true'
         run: pnpm install --frozen-lockfile --ignore-scripts
 
       - name: Check for new changesets in PR
+        if: steps.check.outputs.skip != 'true'
         id: changeset_check
         run: |
           NEW_CHANGESETS=$(git diff --name-only origin/main..HEAD | grep '^\.changeset/.*\.md$' | grep -v 'README.md' | wc -l)
@@ -51,7 +62,7 @@ jobs:
           fi
 
       - name: Create automatic changeset
-        if: steps.changeset_check.outputs.needs_changeset == 'true'
+        if: steps.check.outputs.skip != 'true' && steps.changeset_check.outputs.needs_changeset == 'true'
         env:
           PR_TITLE: ${{ github.event.pull_request.title }}
           PR_BODY: ${{ github.event.pull_request.body }}
@@ -101,7 +112,7 @@ jobs:
           git push origin ${{ github.head_ref }}
 
       - name: Add or update comment about changeset
-        if: steps.changeset_check.outputs.needs_changeset == 'true'
+        if: steps.check.outputs.skip != 'true' && steps.changeset_check.outputs.needs_changeset == 'true'
         uses: actions/github-script@v7
         with:
           script: |
